--- a/src/assets/scss/settings/base/_colors.scss
+++ b/src/assets/scss/settings/base/_colors.scss
@@ -10,7 +10,9 @@ $palette: (
 	dark: (
 		1: #151719,
 		2: #25282C,
-		3: #33363A
+		3: #33363A,
+		4: #181a26,
+		5: #2c344c,
 	),
 	primary: (
 		1: #6163FF,
@@ -75,7 +77,7 @@ $icon--color: (
 
 // Misc elements: background color
 $bg--color: (
-	body: 			get-color(dark, 1),
+	body: 			get-color(dark, 4),
 	body-shadow:	0 20px 48px rgba(get-color(dark, 1), .8),	// body shadow when a boxed layout is used (set to null if don't want a shadow)
 	body-outer:		lighten(get-color(dark, 1), 2%),			// outer bg color when a boxed layout is used
 	bg-color: 		lighten(get-color(light, 1), 9%),			// .has-bg-color helper class
