--- a/src/assets/scss/custom/room.scss
+++ b/src/assets/scss/custom/room.scss
@@ -1,4 +1,4 @@
-@import "../../../../node_modules/bulma/bulma.sass";
+@import "~bulma/bulma.sass";
 $color-red: #c35037;
 $border-radius-large: 12px;
 $color-grey-dark: #313c42;
@@ -6,76 +6,77 @@ $color-grey: #4c5f77;
 $color-meeting-red: #f26b4d;
 $transition-button-hover: 100ms;
 $font-weight-medium: 500;
-$drop-shadow-small: 0px 1px 4px rgba(0,0,0,0.16);
+$drop-shadow-small: 0px 1px 4px rgba(0, 0, 0, 0.16);
 $spacing-1: 4px;
 $spacing-2: 8px;
-
+$background-color: #181a26;
 
 .cntrlButton {
-    border-radius: 0;
-    border: none;
-    background: transparent;
-    padding: 0;
-    margin: 0;
-    cursor: pointer;
+  border-radius: 0;
+  border: none;
+  background: transparent;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
 }
 
 .cntrlButtonFigure {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    margin: 0;
-    position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 0;
+  position: relative;
 }
 
 .cntrlButtonWrap:hover {
-    background: $color-grey-dark;
+  background: $color-grey-dark;
 }
 
 .cntrlButtonWrap {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 48px;
-    height: 48px;
-    border-radius: $border-radius-large;
-    background: $color-grey;
-    transition: background-color $transition-button-hover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 48px;
+  height: 48px;
+  border-radius: $border-radius-large;
+  background: $color-grey;
+  transition: background-color $transition-button-hover;
 }
 
 .cntrlButtonWrap.isOff {
-    background: $color-meeting-red;
+  background: $color-meeting-red;
 }
 
-.cntrlButtonWrap.isOff:focus, .cntrlButtonWrap.isOff:hover {
-    background: $color-red;
+.cntrlButtonWrap.isOff:focus,
+.cntrlButtonWrap.isOff:hover {
+  background: $color-red;
 }
 
 .cntrlButtonLegend {
-    font-size: 12px;
-    line-height: 14px;
-    font-weight: $font-weight-medium;
-    color: #fff;
-    width: 100%;
-    text-align: center;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-    text-shadow: $drop-shadow-small;
-    margin-top: $spacing-2;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 48px;
+  font-size: 12px;
+  line-height: 14px;
+  font-weight: $font-weight-medium;
+  color: #fff;
+  width: 100%;
+  text-align: center;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  text-shadow: $drop-shadow-small;
+  margin-top: $spacing-2;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 48px;
 }
 
 .roomFooter {
-    display: flex;
-    flex-flow: row nowrap;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-flow: row nowrap;
+  width: 100%;
+  //   height: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 // .videoControlsContainer {
@@ -103,33 +104,69 @@ $spacing-2: 8px;
 // }
 
 .buttonWrapper {
-    padding: $spacing-1;
-    display: grid;
-    grid-gap: 12px;
-    grid-auto-flow: column;
+  padding: $spacing-1;
+  display: grid;
+  grid-gap: 12px;
+  grid-auto-flow: column;
 }
 
 .maximize {
-    cursor: pointer;
-    background-color: rgba(10, 10, 10, 0.2);
-    border-radius: 290486px;
+  cursor: pointer;
+  background-color: rgba(10, 10, 10, 0.2);
+  border-radius: 290486px;
 }
 
-// .VideoStage {
-//     // height: 100vh;
-//     // overflow: hidden;
-// }
+.VideoStage {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  overflow-y: hidden;
+  & > div:nth-child(1) {
+    flex-grow: 1;
+    overflow-y: auto;
+  }
+  //     // height: 100vh;
+  //     // overflow: hidden;
+}
 
 .sideContent {
-    height: 100vh;
-    overflow-y: auto;
+  height: 100vh;
+  overflow-y: auto;
 }
 
 .addVideo {
-    position: absolute;
-    bottom: 0;
+  position: absolute;
+  bottom: 0;
 }
 
 .box {
-    background: #1e2232;
+  background: $background-color;
+  padding: 0;
+}
+.message-header {
+  display: none;
+}
+.columns.is-mobile.is-multiline.is-centered {
+  height: 100%;
+  overflow-y: auto;
+  & > div {
+    display: flex;
+    .box {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      figure {
+        width: 100%;
+      }
+    }
+  }
+}
+
+.is-two-thirds-desktop {
+    height: 100%;
+}
+
+.h-50 {
+    height: 50%;
 }
