--- a/src/assets/scss/custom/roomExpand.scss
+++ b/src/assets/scss/custom/roomExpand.scss
@@ -1,66 +1,132 @@
+$dark: #000000;
+$light: #ffffff;
+$dark-hover: #33363a;
+
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .room-expanded {
-    height: 100%;
-    width: 75%;
-    padding: 5px;
-    @media only screen and (max-width: 768px) {
-        width: 100%;
-        height: 75%;
-    }
-    @media only screen and (max-width: 415px) {
-        width: 100%;
-        height: 80%;
-    }
+  height: 100%;
+  width: 75%;
+  padding: 5px;
+  @media only screen and (max-width: 768px) {
+    width: 100%;
+    height: 75%;
+  }
+  @media only screen and (max-width: 415px) {
+    width: 100%;
+    height: 80%;
+  }
+}
+
+@keyframes colorChange {
+  from {
+    color: white;
+  }
+  to {
+    color: black;
+  }
 }
 
 .side-video-container {
-    // --height: 20%;
-    // display: flex;
-    // flex-direction: column;
-    // flex-wrap: wrap;
-    overflow-y: auto;
-    // justify-content: center;
-    // align-items: center;
-    // background: yellow;
-    height: 100%;
-    width: 25%;
-    div {
-        height: 33%;
-        width: 100%;
-        padding: 5px;
-        div, video {
-            height: 100%;
-            width: 100%;
-        }
+  overflow-y: auto;
+  height: 100%;
+  width: 25%;
+
+  .webrtc-media-cell {
+    position: relative;
+    height: 33%;
+    width: 100%;
+    padding: 5px;
+
+    video {
+      height: 100%;
+      width: 100%;
     }
-    @media only screen and (max-width: 768px) {
-        width: 100%;
-        height: 25%;
+
+    .dropdown {
+      overflow: hidden;
+      position: absolute;
+      background: transparent;
+      padding: 0;
+      right: 8px;
+      top: 10px;
+      z-index: 4;
+      height: 100%;
+      width: 100%;
+    }
+
+    .dropdown-button {
+      float: right;
+      cursor: pointer;
+      padding: 0;
+      font-size: 120%;
+      background: transparent;
+      border: none;
+      animation: colorChange 1s infinite;
+      animation-direction: alternate;
+      animation-timing-function: ease-in-out;
+    }
+
+    .dropdown-content {
+      visibility: hidden;
+      position: absolute;
+      background-color: #f9f9f9;
+      top: 5px;
+      right: 8px;
+      //min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      z-index: 4;
+
+      .option {
         display: flex;
-        overflow-x: auto;
-        div {
-            height: 100%;
-            width: 33%;
-            min-width: 33%;
+        font-size: 0.8rem;
+        background: $dark;
+        color: $light;
+        padding: 5px 8px;
+        cursor: pointer;
+
+        &:hover {
+          background-color: $dark-hover;
         }
-    }
-    @media only screen and (max-width: 415px) {
-        width: 100%;
-        height: 20%;
-        display: flex;
-        overflow-x: auto;
-        div {
-            height: 100%;
-            width: 33%;
-            min-width: 33%;
+
+        svg {
+          display: inline;
         }
+      }
     }
+
+    .show {
+      visibility: visible;
+    }
+  }
+
+  @media only screen and (max-width: 768px) {
+    width: 100%;
+    height: 25%;
+    display: flex;
+    overflow-x: auto;
+    .webrtc-media-cell {
+      height: 100%;
+      width: 33%;
+      min-width: 33%;
+    }
+  }
+  @media only screen and (max-width: 415px) {
+    width: 100%;
+    height: 20%;
+    display: flex;
+    overflow-x: auto;
+    .webrtc-media-cell {
+      height: 100%;
+      width: 33%;
+      min-width: 33%;
+    }
+  }
 }
 
 iframe {
-    height: 100% !important;
-    width: 100% !important;
+  height: 100% !important;
+  width: 100% !important;
 }
