--- a/src/assets/scss/custom/roomExpand.scss
+++ b/src/assets/scss/custom/roomExpand.scss
@@ -1,4 +1,4 @@
-$dark: #000000;
+$dark: #181a26;
 $light: #ffffff;
 $dark-hover: #33363a;
 
@@ -7,6 +7,7 @@ $dark-hover: #33363a;
 }
 
 .room-expanded {
+  position: relative;
   height: 100%;
   width: 75%;
   padding: 5px;
@@ -17,6 +18,9 @@ $dark-hover: #33363a;
   @media only screen and (max-width: 415px) {
     width: 100%;
     height: 80%;
+  }
+  &:hover .dropdown-button {
+    display: block;
   }
 }
 
@@ -45,60 +49,8 @@ $dark-hover: #33363a;
       width: 100%;
     }
 
-    .dropdown {
-      overflow: hidden;
-      position: absolute;
-      background: transparent;
-      padding: 0;
-      right: 8px;
-      top: 10px;
-      z-index: 4;
-      height: 100%;
-      width: 100%;
-    }
-
-    .dropdown-button {
-      float: right;
-      cursor: pointer;
-      padding: 0;
-      font-size: 120%;
-      background: transparent;
-      border: none;
-      animation: colorChange 1s infinite;
-      animation-direction: alternate;
-      animation-timing-function: ease-in-out;
-    }
-
-    .dropdown-content {
-      visibility: hidden;
-      position: absolute;
-      background-color: #f9f9f9;
-      top: 5px;
-      right: 8px;
-      //min-width: 160px;
-      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-      z-index: 4;
-
-      .option {
-        display: flex;
-        font-size: 0.8rem;
-        background: $dark;
-        color: $light;
-        padding: 5px 8px;
-        cursor: pointer;
-
-        &:hover {
-          background-color: $dark-hover;
-        }
-
-        svg {
-          display: inline;
-        }
-      }
-    }
-
-    .show {
-      visibility: visible;
+    &:hover .dropdown-button {
+      display: block;
     }
   }
 
@@ -124,6 +76,73 @@ $dark-hover: #33363a;
       min-width: 33%;
     }
   }
+}
+
+.dropdown {
+  overflow: hidden;
+  position: absolute;
+  background: transparent;
+  padding: 0;
+  right: 8px;
+  top: 10px;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+}
+
+.dropdown-button {
+  display: none;
+  float: right;
+  cursor: pointer;
+  padding: 0;
+  font-size: 120%;
+  background: transparent;
+  border: none;
+  animation: colorChange 1s infinite;
+  animation-direction: alternate;
+  animation-timing-function: ease-in-out;
+}
+
+.dropdown-content {
+  display: none;
+  //visibility: hidden;
+  position: absolute;
+  //background-color: #f9f9f9;
+  top: 5px;
+  right: 8px;
+  //min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.6);
+  z-index: 1;
+  background: $dark;
+  border-radius: 15px;
+  overflow: hidden;
+
+  .option {
+    display: flex;
+    font-size: 0.8rem;
+    color: $light;
+    padding: 5px 8px 5px 8px;
+    cursor: pointer;
+    line-height: 40px;
+    //justify-content: space-between;
+    &:hover {
+      background-color: $dark-hover;
+    }
+
+    svg {
+      display: inline;
+      margin: 10px;
+    }
+    span {
+      margin-left: 5px;
+      margin-right: 10px;
+    }
+  }
+}
+
+.show {
+  //visibility: visible;
+  display: block;
 }
 
 iframe {
