--- a/src/assets/scss/custom/room.scss
+++ b/src/assets/scss/custom/room.scss
@@ -12,6 +12,7 @@ $spacing-2: 8px;
 $background-color: #181a26;
 $button-background: black;
 $white: #fff;
+$bg-dark-chat: #1e2337;
 
 * {
   box-sizing: border-box;
@@ -21,6 +22,7 @@ $white: #fff;
   --per-row: 1;
   --rows: 1;
   --video-padding: 3px;
+  --chat-width: 27%;
   @media only screen and (max-width: 600px) {
     --video-padding: 1.5px;
   }
@@ -143,6 +145,8 @@ $white: #fff;
   // height: 100vh;
   // width: 100vw;
   overflow: hidden;
+  transition: width 0.3s ease-out;
+  width: 100%;
 }
 
 @media only screen and (max-width: 600px) {
@@ -236,14 +240,113 @@ $white: #fff;
   }
 }
 
-// .unpinned {
-//   + .buttonWrapper {
-//     bottom: -65px;
-//   }
-//   &:hover + .buttonWrapper {
-//     bottom: 25px;
-//   }
-// }
+.video-container.chat-open {
+  width: calc(100% - var(--chat-width));
+}
+
+// chat room
+.room-chat {
+  position: fixed;
+  height: 100%;
+  width: var(--chat-width);
+  top: 0;
+  right: 0;
+  background: $bg-dark-chat;
+  z-index: 2;
+  transform: translateX(100%);
+  transition: transform 0.3s ease-out;
+  .chat-header {
+    height: 8%;
+    padding: 10px;
+    display: flex;
+    .title {
+      flex: 1;
+    }
+  }
+  .chat-main {
+    height: 82%;
+    position: relative;
+    // emojis
+    .emoji-container {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      max-width: 80%;
+      .emoji-mart {
+        max-width: 100%;
+        overflow-x: auto;
+      }
+      .emoji-mart-dark {
+        border: none;
+        border-radius: 15px;
+        box-shadow: 7px 8px 16px 5px rgba(0, 0, 0, 0.9);
+        background: $background-color;
+        .emoji-mart-category-label {
+          font-size: 80%;
+          span {
+            background: $background-color;
+          }
+        }
+        .emoji-mart-search{
+          input {
+            background: $background-color;
+          }
+        }
+      }
+    }
+  }
+  .chat-footer {
+    height: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top: 3px solid #444b66;
+    input {
+      font-size: small;
+      font-weight: normal;
+    }
+
+    form {
+      display: flex;
+      width: 100%;
+      justify-content: center;
+    }
+    .emoji-open-button {
+      margin: 5px;
+      //margin-right: 7px;
+      cursor: pointer;
+      border-radius: 3px;
+      padding: 5px;
+      &:hover {
+        border: 1px solid #4c5f77;
+        box-shadow: 0px 8px 10px 0px rgba(0, 0, 0, 0.6);
+      }
+    }
+    .chat-message-input {
+      background: transparent;
+      color: white;
+      border: none;
+      outline: none;
+      &::placeholder {
+        color: white;
+      }
+    }
+    .chat-send-button {
+      background: transparent;
+      color: white;
+      border: none;
+      outline: none;
+      margin-left: auto;
+      cursor: pointer;
+    }
+  }
+}
+
+.room-chat.open {
+  transform: translateX(0);
+}
+
+
 
 
 
