Change App and User states to Redux store

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -25,7 +25,7 @@
 /*--------------------------------------------------------------
 # Scroll reveal
 --------------------------------------------------------------*/
-@import "core/base/scroll-reveal";
+//@import "core/base/scroll-reveal";
 
 /*--------------------------------------------------------------
 # Base
