--- a/src/assets/scss/custom/roomChat.scss
+++ b/src/assets/scss/custom/roomChat.scss
@@ -11,6 +11,9 @@ $url-color: #ACADFF;
   --message-avatar-size: 30px;
   --max-message-avatar-size: 30px;
   --close-button-size: 36px;
+  //@media only screen and (max-width: 600px) {
+  //
+  //}
 }
 
 * {
