--- a/src/assets/scss/custom/roomChat.scss
+++ b/src/assets/scss/custom/roomChat.scss
@@ -240,6 +240,7 @@ $url-color: #ACADFF;
   padding: 0 10px !important;
   color: $font-color;
   max-width: 100%;
+  font-size: medium;
   //max-height: 200px;
   overflow-y: auto;
   word-wrap: break-word;
