--- a/src/assets/scss/custom/room.scss
+++ b/src/assets/scss/custom/room.scss
@@ -13,6 +13,7 @@ $background-color: #181a26;
 $button-background: black;
 $white: #fff;
 $bg-dark-chat: #1e2337;
+$font-color: #bfbebe;
 
 * {
   box-sizing: border-box;
@@ -23,6 +24,11 @@ $bg-dark-chat: #1e2337;
   --rows: 1;
   --video-padding: 3px;
   --chat-width: 27%;
+  --message-snackbar-width: 200px;
+  --message-snackbar-height: 70px;
+  --message-snackbar-left: 20px;
+  --message-snackbar-bottom: 40px;
+
   @media only screen and (max-width: 500px) {
     --video-padding: 1.5px;
     --chat-width: 100%;
@@ -252,6 +258,49 @@ $bg-dark-chat: #1e2337;
 
 .video-container.chat-open {
   width: calc(100% - var(--chat-width));
+}
+
+.message-snackbar {
+  min-height: var(--message-snackbar-height);
+  min-width: var(--message-snackbar-width);
+  max-height: calc(3*var(--message-snackbar-height));
+  max-width: calc(1.5*var(--message-snackbar-width));
+  position: absolute;
+  //left: var(--message-snackbar-left);
+  //bottom: var(--message-snackbar-bottom);
+  z-index: 2;
+  border-radius: 10px;
+  background: $bg-dark-chat;
+  color: $font-color;
+  overflow-y: auto;
+  padding: 10px;
+  font-size: medium;
+  //visibility: hidden;
+  .message-component {
+    padding: 0 !important;
+  }
+}
+
+.side-message-body {
+  background: #272c47 !important;
+}
+
+.example-enter {
+  opacity: 0.01;
+}
+
+.example-enter.example-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.example-leave {
+  opacity: 1;
+}
+
+.example-leave.example-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
 }
 
 
