--- a/src/assets/scss/core/abstracts/_functions.scss
+++ b/src/assets/scss/core/abstracts/_functions.scss
@@ -1,6 +1,6 @@
 // --------------------------------------------------------------------
 // Recursive map merge function  --------------------------------------
-// Used in _variables.scss --------------------------------------------
+// Used in variables.scss --------------------------------------------
 // --------------------------------------------------------------------
 @function map-push($parent-map, $child-map) {
 	$result: $parent-map;
