Change padding in notification

--- a/src/assets/scss/custom/notifications.scss
+++ b/src/assets/scss/custom/notifications.scss
@@ -38,7 +38,7 @@ $notifications-error-background-color: #bd362f;
   display: flex;
   align-items: center;
   box-sizing: border-box;
-  padding: 15px;
+  padding: 7px 3px;
   border-radius: 2px;
   color: $notifications-color;
   background-color: $notifications-background-color;
