--- a/src/assets/scss/custom/room.scss
+++ b/src/assets/scss/custom/room.scss
@@ -169,11 +169,11 @@ body {
   overflow: hidden;
   transition: width 0.3s ease-out;
   width: 100%;
-  overflow-y: auto;
-  @media only screen and (max-width: 700px) {
-    overflow-y: hidden;
-    overflow-x: auto;
-  }
+  //overflow-y: auto;
+  //@media only screen and (max-width: 700px) {
+  //  overflow-y: hidden;
+  //  overflow-x: auto;
+  //}
 }
 
 .tooltip {
