Change color of avatar in message

--- a/src/assets/scss/custom/roomChat.scss
+++ b/src/assets/scss/custom/roomChat.scss
@@ -2,7 +2,8 @@ $border-color: #444b66;
 $bg-dark-chat: #1e2337;
 $background-color: #181a26;
 $font-color: #bfbebe;
-$avatar-background: #107ad1;
+//$avatar-background: #107ad1;
+$avatar-background: #43306d;
 $message-body-color: #bfbebe;
 $message-body-background: #3f475f;
 $url-color: #ACADFF;
