--- a/src/assets/scss/custom/notifications.scss
+++ b/src/assets/scss/custom/notifications.scss
@@ -20,6 +20,7 @@ $notifications-message-background-color: #1e2337;
 $notifications-success-background-color: #51a351;
 $notifications-warning-background-color: #f89406;
 $notifications-error-background-color: #bd362f;
+$notifications-request-background-color: #222a50;
 
 * {
   box-sizing: border-box !important;
@@ -215,8 +216,35 @@ $notifications-error-background-color: #bd362f;
   //}
 }
 
+.notification-request {
+  background-color: $notifications-request-background-color;
+  cursor: default;
+  button {
+    border-radius: 5px;
+    border: none;
+    padding: 4px 10px;
+    color: whitesmoke;
+    cursor: pointer;
+  }
+  .entry-request-deny {
+    background: #84446f;
+    margin: 0 10px 0 0;
+  }
+  .entry-request-accept {
+    background: #115067;
+    margin: 0 5px;
+  }
+  .entry-request-message {
+    margin-bottom: 14px !important;
+    font-size: medium;
+  }
+}
+
 .notification-message-container {
   width: 100%;
   height: 100%;
   padding: 7px !important;
+  &.request {
+    padding: 7px 7px 7px 14px !important;
+  }
 }
