--- a/src/assets/scss/custom/roomChat.scss
+++ b/src/assets/scss/custom/roomChat.scss
@@ -9,6 +9,7 @@ $message-body-background: #3f475f;
 $url-color: #ACADFF;
 $button-border-color: #4c5f77;
 $avatar-background-red: #9c4531;
+$message-display-name-color: #ac91e6;
 
 :root {
   --message-avatar-size: 30px;
@@ -257,6 +258,8 @@ $avatar-background-red: #9c4531;
 }
 
 .message-body-container {
+  display: flex;
+  flex-direction: column;
   margin: 0 5px;
   //color: $message-body-color;
   background: $message-body-background;
@@ -275,5 +278,11 @@ $avatar-background-red: #9c4531;
   }
   &.left {
     border-radius: 0 15px 15px 15px;
+  }
+  .message-display-name {
+    font-size: 65%;
+    margin: 0 0 -4px 0;
+    color: $message-display-name-color;
+    line-height: 15px !important;
   }
 }
